--- a/index.html
+++ b/index.html
@@ -46,41 +46,41 @@
     </div>
   </section>
 
-<!-- Featured Locations Section -->
+<!-- FEATURED LOCATIONS SECTION -->
 <section class="py-16 px-6 bg-gray-100 text-center">
   <h2 class="text-3xl md:text-4xl font-bold text-gray-800 mb-10">
-    Featured Locations
+    Featured Areas
   </h2>
 
-  <!-- Area Cards -->
+  <!-- AREA CARDS -->
   <div class="grid md:grid-cols-2 lg:grid-cols-4 gap-8 max-w-7xl mx-auto">
 
     <!-- School Gate -->
     <div class="bg-white rounded-2xl shadow-lg hover:shadow-2xl transition overflow-hidden">
-      <img src="https://images.unsplash.com/photo-1599423300746-b62533397364?auto=format&fit=crop&w=800&q=80" alt="School Gate" class="w-full h-48 object-cover">
+      <img src="https://images.unsplash.com/photo-1600585154154-8f8bdee6e4b1?auto=format&fit=crop&w=800&q=80" alt="School Gate" class="w-full h-48 object-cover">
       <div class="p-5">
         <h3 class="text-2xl font-semibold text-gray-800">School Gate</h3>
-        <p class="text-gray-600 mt-2">Hostels close to campus main gate with easy transport access.</p>
+        <p class="text-gray-600 mt-2">Hostels close to campus with easy transport access.</p>
         <button onclick="toggleHostels('schoolgate')" class="bg-blue-600 hover:bg-blue-700 text-white px-5 py-2 mt-4 rounded-full font-medium">View Hostels</button>
       </div>
     </div>
 
     <!-- Satellite Gate -->
     <div class="bg-white rounded-2xl shadow-lg hover:shadow-2xl transition overflow-hidden">
-      <img src="https://images.unsplash.com/photo-1600585154340-be6161a56a0c?auto=format&fit=crop&w=800&q=80" alt="Satellite Gate" class="w-full h-48 object-cover">
+      <img src="https://images.unsplash.com/photo-1599423300746-b62533397364?auto=format&fit=crop&w=800&q=80" alt="Satellite Gate" class="w-full h-48 object-cover">
       <div class="p-5">
         <h3 class="text-2xl font-semibold text-gray-800">Satellite Gate</h3>
-        <p class="text-gray-600 mt-2">Modern apartments and lodges with top facilities.</p>
+        <p class="text-gray-600 mt-2">Modern lodges with full amenities and 24/7 power.</p>
         <button onclick="toggleHostels('satellite')" class="bg-blue-600 hover:bg-blue-700 text-white px-5 py-2 mt-4 rounded-full font-medium">View Hostels</button>
       </div>
     </div>
 
     <!-- Iworoko -->
     <div class="bg-white rounded-2xl shadow-lg hover:shadow-2xl transition overflow-hidden">
-      <img src="https://images.unsplash.com/photo-1600047509807-ba8f99d2cdde?auto=format&fit=crop&w=800&q=80" alt="Iworoko" class="w-full h-48 object-cover">
+      <img src="https://images.unsplash.com/photo-1600585154207-9a5b92f3a9e7?auto=format&fit=crop&w=800&q=80" alt="Iworoko" class="w-full h-48 object-cover">
       <div class="p-5">
         <h3 class="text-2xl font-semibold text-gray-800">Iworoko</h3>
-        <p class="text-gray-600 mt-2">Affordable hostels surrounded by student-friendly shops.</p>
+        <p class="text-gray-600 mt-2">Affordable hostels with nearby student-friendly shops.</p>
         <button onclick="toggleHostels('iworoko')" class="bg-blue-600 hover:bg-blue-700 text-white px-5 py-2 mt-4 rounded-full font-medium">View Hostels</button>
       </div>
     </div>
@@ -90,23 +90,23 @@
       <img src="https://images.unsplash.com/photo-1560184897-ae75f418493e?auto=format&fit=crop&w=800&q=80" alt="Phase Two" class="w-full h-48 object-cover">
       <div class="p-5">
         <h3 class="text-2xl font-semibold text-gray-800">Phase Two</h3>
-        <p class="text-gray-600 mt-2">Quiet environment with modern homes and shared spaces.</p>
+        <p class="text-gray-600 mt-2">Quiet environment with modern homes and great views.</p>
         <button onclick="toggleHostels('phasetwo')" class="bg-blue-600 hover:bg-blue-700 text-white px-5 py-2 mt-4 rounded-full font-medium">View Hostels</button>
       </div>
     </div>
   </div>
 
-  <!-- HOSTEL LISTINGS (hidden by default) -->
-  <div id="hostel-listings" class="hidden mt-16">
+  <!-- HOSTEL LISTINGS (HIDDEN INITIALLY) -->
+  <div id="hostel-listings" class="mt-12 hidden transition-all duration-500 ease-in-out">
     <!-- SCHOOL GATE HOSTELS -->
     <div id="schoolgate" class="hidden">
       <h3 class="text-2xl font-bold text-gray-800 mb-6">🏫 School Gate Hostels</h3>
       <div class="grid md:grid-cols-3 sm:grid-cols-2 grid-cols-1 gap-8 max-w-6xl mx-auto">
-        <div class="bg-white rounded-2xl overflow-hidden shadow-lg hover:shadow-2xl transition">
-          <img src="https://images.unsplash.com/photo-1600047509807-ba8f99d2cdde?auto=format&fit=crop&w=800&q=80" alt="Hostel 1" class="w-full h-56 object-cover">
+        <div class="bg-white rounded-2xl shadow-lg hover:shadow-2xl transition overflow-hidden">
+          <img src="https://images.unsplash.com/photo-1600047509807-ba8f99d2cdde?auto=format&fit=crop&w=800&q=80" class="w-full h-56 object-cover" alt="">
           <div class="p-5">
             <h4 class="text-xl font-semibold text-gray-800">Bright Lodge</h4>
-            <p class="text-gray-600 mt-2">1 Room · Wi-Fi · Near EKSU Main Gate</p>
+            <p class="text-gray-600 mt-2">1 Room · Wi-Fi · Close to Main Gate</p>
             <div class="flex justify-between items-center mt-4">
               <span class="text-blue-600 font-bold">$500/mo</span>
               <button class="bg-blue-600 text-white px-4 py-2 rounded-full">Book</button>
@@ -120,11 +120,11 @@
     <div id="satellite" class="hidden">
       <h3 class="text-2xl font-bold text-gray-800 mb-6">🛰️ Satellite Gate Hostels</h3>
       <div class="grid md:grid-cols-3 sm:grid-cols-2 grid-cols-1 gap-8 max-w-6xl mx-auto">
-        <div class="bg-white rounded-2xl overflow-hidden shadow-lg hover:shadow-2xl transition">
-          <img src="https://images.unsplash.com/photo-1599423300746-b62533397364?auto=format&fit=crop&w=800&q=80" alt="Hostel 2" class="w-full h-56 object-cover">
+        <div class="bg-white rounded-2xl shadow-lg hover:shadow-2xl transition overflow-hidden">
+          <img src="https://images.unsplash.com/photo-1600047509807-ba8f99d2cdde?auto=format&fit=crop&w=800&q=80" class="w-full h-56 object-cover" alt="">
           <div class="p-5">
             <h4 class="text-xl font-semibold text-gray-800">Elite Residence</h4>
-            <p class="text-gray-600 mt-2">2 Rooms · AC · 24/7 Power</p>
+            <p class="text-gray-600 mt-2">2 Rooms · AC · Parking Lot</p>
             <div class="flex justify-between items-center mt-4">
               <span class="text-blue-600 font-bold">$800/mo</span>
               <button class="bg-blue-600 text-white px-4 py-2 rounded-full">Book</button>
@@ -138,11 +138,11 @@
     <div id="iworoko" class="hidden">
       <h3 class="text-2xl font-bold text-gray-800 mb-6">🏠 Iworoko Hostels</h3>
       <div class="grid md:grid-cols-3 sm:grid-cols-2 grid-cols-1 gap-8 max-w-6xl mx-auto">
-        <div class="bg-white rounded-2xl overflow-hidden shadow-lg hover:shadow-2xl transition">
-          <img src="https://images.unsplash.com/photo-1600047509807-ba8f99d2cdde?auto=format&fit=crop&w=800&q=80" alt="Hostel 3" class="w-full h-56 object-cover">
+        <div class="bg-white rounded-2xl shadow-lg hover:shadow-2xl transition overflow-hidden">
+          <img src="https://images.unsplash.com/photo-1599423300746-b62533397364?auto=format&fit=crop&w=800&q=80" class="w-full h-56 object-cover" alt="">
           <div class="p-5">
             <h4 class="text-xl font-semibold text-gray-800">Comfort Villa</h4>
-            <p class="text-gray-600 mt-2">1 Room · Borehole · Student Friendly</p>
+            <p class="text-gray-600 mt-2">1 Room · Borehole · Student Area</p>
             <div class="flex justify-between items-center mt-4">
               <span class="text-blue-600 font-bold">$400/mo</span>
               <button class="bg-blue-600 text-white px-4 py-2 rounded-full">Book</button>
@@ -156,11 +156,11 @@
     <div id="phasetwo" class="hidden">
       <h3 class="text-2xl font-bold text-gray-800 mb-6">🏡 Phase Two Hostels</h3>
       <div class="grid md:grid-cols-3 sm:grid-cols-2 grid-cols-1 gap-8 max-w-6xl mx-auto">
-        <div class="bg-white rounded-2xl overflow-hidden shadow-lg hover:shadow-2xl transition">
-          <img src="https://images.unsplash.com/photo-1599423300746-b62533397364?auto=format&fit=crop&w=800&q=80" alt="Hostel 4" class="w-full h-56 object-cover">
+        <div class="bg-white rounded-2xl shadow-lg hover:shadow-2xl transition overflow-hidden">
+          <img src="https://images.unsplash.com/photo-1560184897-ae75f418493e?auto=format&fit=crop&w=800&q=80" class="w-full h-56 object-cover" alt="">
           <div class="p-5">
             <h4 class="text-xl font-semibold text-gray-800">Green Haven</h4>
-            <p class="text-gray-600 mt-2">2 Rooms · Spacious · Secure Compound</p>
+            <p class="text-gray-600 mt-2">2 Rooms · 24/7 Light · Balcony</p>
             <div class="flex justify-between items-center mt-4">
               <span class="text-blue-600 font-bold">$650/mo</span>
               <button class="bg-blue-600 text-white px-4 py-2 rounded-full">Book</button>
@@ -172,17 +172,20 @@
   </div>
 </section>
 
-<!-- JS Logic -->
+<!-- SCRIPT -->
 <script>
   function toggleHostels(area) {
     const listings = document.getElementById("hostel-listings");
     listings.classList.remove("hidden");
 
-    // Hide all hostel groups first
+    // Hide all hostel groups
     document.querySelectorAll("#schoolgate, #satellite, #iworoko, #phasetwo").forEach(div => div.classList.add("hidden"));
 
-    // Show selected group
+    // Show the one that was clicked
     document.getElementById(area).classList.remove("hidden");
+
+    // Smooth scroll to hostels
+    listings.scrollIntoView({ behavior: 'smooth' });
   }
 </script>
 
@@ -193,6 +196,7 @@
 
 </body>
 </html>
+
 
 
 
