--- a/index.html
+++ b/index.html
@@ -53,40 +53,40 @@
   <div class="grid md:grid-cols-2 lg:grid-cols-4 gap-8 max-w-7xl mx-auto">
     <!-- SCHOOL GATE -->
     <div class="bg-white rounded-2xl shadow-lg hover:shadow-2xl transition overflow-hidden">
-      <img src="https://images.unsplash.com/photo-1600585154154-8f8bdee6e4b1?auto=format&fit=crop&w=800&q=80" alt="School Gate" class="w-full h-48 object-cover">
+      <img src="https://images.unsplash.com/photo-1598706349416-3c4b0cbf4e3b?auto=format&fit=crop&w=800&q=80" alt="School Gate" class="w-full h-48 object-cover">
       <div class="p-5">
         <h3 class="text-2xl font-semibold text-gray-800">School Gate</h3>
-        <p class="text-gray-600 mt-2">Hostels close to campus main gate with transport access.</p>
+        <p class="text-gray-600 mt-2">Hostels close to the main campus gate with easy transport access.</p>
         <button onclick="openHostel('schoolGate')" class="inline-block bg-blue-600 hover:bg-blue-700 text-white px-5 py-2 mt-4 rounded-full font-medium">View Hostels</button>
       </div>
     </div>
 
     <!-- SATELLITE GATE -->
     <div class="bg-white rounded-2xl shadow-lg hover:shadow-2xl transition overflow-hidden">
-      <img src="https://images.unsplash.com/photo-1599423300746-b62533397364?auto=format&fit=crop&w=800&q=80" alt="Satellite Gate" class="w-full h-48 object-cover">
+      <img src="https://images.unsplash.com/photo-1605276374104-dee2a0ed3f87?auto=format&fit=crop&w=800&q=80" alt="Satellite Gate" class="w-full h-48 object-cover">
       <div class="p-5">
         <h3 class="text-2xl font-semibold text-gray-800">Satellite Gate</h3>
-        <p class="text-gray-600 mt-2">Modern lodges with all facilities and 24/7 power.</p>
+        <p class="text-gray-600 mt-2">Modern student lodges with reliable light and water supply.</p>
         <button onclick="openHostel('satelliteGate')" class="inline-block bg-blue-600 hover:bg-blue-700 text-white px-5 py-2 mt-4 rounded-full font-medium">View Hostels</button>
       </div>
     </div>
 
     <!-- IWOROKO -->
     <div class="bg-white rounded-2xl shadow-lg hover:shadow-2xl transition overflow-hidden">
-      <img src="https://images.unsplash.com/photo-1600585154207-9a5b92f3a9e7?auto=format&fit=crop&w=800&q=80" alt="Iworoko" class="w-full h-48 object-cover">
+      <img src="https://images.unsplash.com/photo-1600585154154-8f8bdee6e4b1?auto=format&fit=crop&w=800&q=80" alt="Iworoko" class="w-full h-48 object-cover">
       <div class="p-5">
         <h3 class="text-2xl font-semibold text-gray-800">Iworoko</h3>
-        <p class="text-gray-600 mt-2">Affordable student hostels near local shops.</p>
+        <p class="text-gray-600 mt-2">Affordable hostels close to local shops and transport links.</p>
         <button onclick="openHostel('iworoko')" class="inline-block bg-blue-600 hover:bg-blue-700 text-white px-5 py-2 mt-4 rounded-full font-medium">View Hostels</button>
       </div>
     </div>
 
     <!-- PHASE TWO -->
     <div class="bg-white rounded-2xl shadow-lg hover:shadow-2xl transition overflow-hidden">
-      <img src="https://images.unsplash.com/photo-1560184897-ae75f418493e?auto=format&fit=crop&w=800&q=80" alt="Phase Two" class="w-full h-48 object-cover">
+      <img src="https://images.unsplash.com/photo-1600585154302-98d08ab4e310?auto=format&fit=crop&w=800&q=80" alt="Phase Two" class="w-full h-48 object-cover">
       <div class="p-5">
         <h3 class="text-2xl font-semibold text-gray-800">Phase Two</h3>
-        <p class="text-gray-600 mt-2">Peaceful area with beautiful shared apartments.</p>
+        <p class="text-gray-600 mt-2">Peaceful area with clean, secure shared apartments.</p>
         <button onclick="openHostel('phaseTwo')" class="inline-block bg-blue-600 hover:bg-blue-700 text-white px-5 py-2 mt-4 rounded-full font-medium">View Hostels</button>
       </div>
     </div>
@@ -94,33 +94,32 @@
 </section>
 
 <!-- HOSTEL POPUP MODAL -->
-<div id="hostelModal" class="fixed inset-0 bg-black bg-opacity-60 hidden justify-center items-center z-50">
-  <div class="bg-white rounded-2xl w-11/12 md:w-2/3 lg:w-1/2 p-6 relative">
-    <button onclick="closeHostel()" class="absolute top-4 right-4 text-gray-500 hover:text-red-500 text-2xl">&times;</button>
-    <h3 id="modalTitle" class="text-2xl font-bold mb-4 text-center text-gray-800"></h3>
-
+<div id="hostelModal" class="fixed inset-0 bg-black bg-opacity-70 hidden justify-center items-center z-50">
+  <div class="bg-white rounded-2xl w-11/12 md:w-2/3 lg:w-1/2 p-6 relative shadow-2xl transform transition-all scale-95">
+    <button onclick="closeHostel()" class="absolute top-3 right-4 text-gray-500 hover:text-red-500 text-2xl">&times;</button>
+    <h3 id="modalTitle" class="text-2xl font-bold mb-6 text-center text-gray-800"></h3>
     <div id="hostelList" class="grid md:grid-cols-2 gap-6"></div>
   </div>
 </div>
 
-<!-- SCRIPT FOR MODAL LOGIC -->
+<!-- SCRIPT FOR POPUP FUNCTIONALITY -->
 <script>
   const hostelData = {
     schoolGate: [
-      { name: "Grace Villa", price: "₦180,000 / year", image: "https://images.unsplash.com/photo-1600585154207-9a5b92f3a9e7?auto=format&fit=crop&w=800&q=80" },
-      { name: "Peace Lodge", price: "₦200,000 / year", image: "https://images.unsplash.com/photo-1599423300746-b62533397364?auto=format&fit=crop&w=800&q=80" },
+      { name: "Grace Villa", price: "₦180,000 / year", image: "https://images.unsplash.com/photo-1598706349416-3c4b0cbf4e3b?auto=format&fit=crop&w=800&q=80" },
+      { name: "Peace Lodge", price: "₦200,000 / year", image: "https://images.unsplash.com/photo-1605276374104-dee2a0ed3f87?auto=format&fit=crop&w=800&q=80" }
     ],
     satelliteGate: [
-      { name: "Royal Suites", price: "₦250,000 / year", image: "https://images.unsplash.com/photo-1600585154154-8f8bdee6e4b1?auto=format&fit=crop&w=800&q=80" },
-      { name: "Comfort Villa", price: "₦230,000 / year", image: "https://images.unsplash.com/photo-1560184897-ae75f418493e?auto=format&fit=crop&w=800&q=80" },
+      { name: "Royal Suites", price: "₦250,000 / year", image: "https://images.unsplash.com/photo-1600585154302-98d08ab4e310?auto=format&fit=crop&w=800&q=80" },
+      { name: "Comfort Villa", price: "₦230,000 / year", image: "https://images.unsplash.com/photo-1600585154154-8f8bdee6e4b1?auto=format&fit=crop&w=800&q=80" }
     ],
     iworoko: [
-      { name: "Victory Lodge", price: "₦150,000 / year", image: "https://images.unsplash.com/photo-1600585154154-8f8bdee6e4b1?auto=format&fit=crop&w=800&q=80" },
-      { name: "Divine Hostel", price: "₦170,000 / year", image: "https://images.unsplash.com/photo-1599423300746-b62533397364?auto=format&fit=crop&w=800&q=80" },
+      { name: "Victory Lodge", price: "₦150,000 / year", image: "https://images.unsplash.com/photo-1598706349416-3c4b0cbf4e3b?auto=format&fit=crop&w=800&q=80" },
+      { name: "Divine Hostel", price: "₦170,000 / year", image: "https://images.unsplash.com/photo-1605276374104-dee2a0ed3f87?auto=format&fit=crop&w=800&q=80" }
     ],
     phaseTwo: [
-      { name: "Harmony Place", price: "₦220,000 / year", image: "https://images.unsplash.com/photo-1560184897-ae75f418493e?auto=format&fit=crop&w=800&q=80" },
-      { name: "Golden Homes", price: "₦240,000 / year", image: "https://images.unsplash.com/photo-1600585154207-9a5b92f3a9e7?auto=format&fit=crop&w=800&q=80" },
+      { name: "Harmony Place", price: "₦220,000 / year", image: "https://images.unsplash.com/photo-1600585154302-98d08ab4e310?auto=format&fit=crop&w=800&q=80" },
+      { name: "Golden Homes", price: "₦240,000 / year", image: "https://images.unsplash.com/photo-1600585154154-8f8bdee6e4b1?auto=format&fit=crop&w=800&q=80" }
     ]
   };
 
@@ -132,24 +131,26 @@
     title.innerText = area.replace(/([A-Z])/g, ' $1').trim() + " Hostels";
     list.innerHTML = hostelData[area].map(
       (hostel) => `
-      <div class="border rounded-xl overflow-hidden shadow-md hover:shadow-lg transition">
-        <img src="${hostel.image}" class="w-full h-40 object-cover">
-        <div class="p-4">
-          <h4 class="font-semibold text-lg">${hostel.name}</h4>
-          <p class="text-gray-600">${hostel.price}</p>
-          <button class="mt-3 w-full bg-blue-600 hover:bg-blue-700 text-white py-2 rounded-full">Book Now</button>
+        <div class="border rounded-xl overflow-hidden shadow-md hover:shadow-lg transition">
+          <img src="${hostel.image}" class="w-full h-40 object-cover">
+          <div class="p-4">
+            <h4 class="font-semibold text-lg">${hostel.name}</h4>
+            <p class="text-gray-600">${hostel.price}</p>
+            <button class="mt-3 w-full bg-blue-600 hover:bg-blue-700 text-white py-2 rounded-full">Book Now</button>
+          </div>
         </div>
-      </div>
       `
     ).join("");
 
     modal.classList.remove("hidden");
     modal.classList.add("flex");
+    modal.style.display = "flex";
   }
 
   function closeHostel() {
     const modal = document.getElementById("hostelModal");
     modal.classList.add("hidden");
+    modal.style.display = "none";
   }
 </script>
 
@@ -160,6 +161,7 @@
 
 </body>
 </html>
+
 
 
 
