--- a/index.html
+++ b/index.html
@@ -95,14 +95,33 @@
 
 <!-- HOSTEL POPUP MODAL -->
 <div id="hostelModal" class="fixed inset-0 bg-black bg-opacity-70 hidden justify-center items-center z-50">
-  <div class="bg-white rounded-2xl w-11/12 md:w-2/3 lg:w-1/2 p-6 relative shadow-2xl transform transition-all scale-95">
+  <div class="bg-white rounded-2xl w-11/12 md:w-2/3 lg:w-1/2 p-6 relative shadow-2xl">
     <button onclick="closeHostel()" class="absolute top-3 right-4 text-gray-500 hover:text-red-500 text-2xl">&times;</button>
     <h3 id="modalTitle" class="text-2xl font-bold mb-6 text-center text-gray-800"></h3>
     <div id="hostelList" class="grid md:grid-cols-2 gap-6"></div>
   </div>
 </div>
 
-<!-- SCRIPT FOR POPUP FUNCTIONALITY -->
+<!-- BOOKING MODAL -->
+<div id="bookingModal" class="fixed inset-0 bg-black bg-opacity-70 hidden justify-center items-center z-50">
+  <div class="bg-white rounded-2xl w-11/12 md:w-1/2 lg:w-1/3 p-6 relative shadow-2xl">
+    <button onclick="closeBooking()" class="absolute top-3 right-4 text-gray-500 hover:text-red-500 text-2xl">&times;</button>
+    <h3 class="text-2xl font-bold mb-6 text-center text-gray-800">Book Your Hostel</h3>
+
+    <form id="bookingForm" class="space-y-4">
+      <input type="text" id="userName" placeholder="Full Name" required class="w-full border rounded-lg p-3 focus:outline-none focus:ring-2 focus:ring-blue-500">
+      <input type="tel" id="userPhone" placeholder="Phone Number" required class="w-full border rounded-lg p-3 focus:outline-none focus:ring-2 focus:ring-blue-500">
+      <select id="bookingDuration" required class="w-full border rounded-lg p-3 focus:outline-none focus:ring-2 focus:ring-blue-500">
+        <option value="">Select Duration</option>
+        <option value="1 Semester">1 Semester</option>
+        <option value="1 Year">1 Year</option>
+      </select>
+      <button type="submit" class="w-full bg-blue-600 hover:bg-blue-700 text-white py-3 rounded-full font-medium">Proceed to Payment</button>
+    </form>
+  </div>
+</div>
+
+<!-- SCRIPT FOR MODALS -->
 <script>
   const hostelData = {
     schoolGate: [
@@ -136,7 +155,7 @@
           <div class="p-4">
             <h4 class="font-semibold text-lg">${hostel.name}</h4>
             <p class="text-gray-600">${hostel.price}</p>
-            <button class="mt-3 w-full bg-blue-600 hover:bg-blue-700 text-white py-2 rounded-full">Book Now</button>
+            <button onclick="openBooking('${hostel.name}', '${hostel.price}')" class="mt-3 w-full bg-blue-600 hover:bg-blue-700 text-white py-2 rounded-full">Book Now</button>
           </div>
         </div>
       `
@@ -144,13 +163,27 @@
 
     modal.classList.remove("hidden");
     modal.classList.add("flex");
-    modal.style.display = "flex";
   }
 
   function closeHostel() {
-    const modal = document.getElementById("hostelModal");
-    modal.classList.add("hidden");
-    modal.style.display = "none";
+    document.getElementById("hostelModal").classList.add("hidden");
+  }
+
+  function openBooking(hostelName, price) {
+    closeHostel();
+    const bookingModal = document.getElementById("bookingModal");
+    bookingModal.classList.remove("hidden");
+    bookingModal.classList.add("flex");
+
+    document.getElementById("bookingForm").onsubmit = (e) => {
+      e.preventDefault();
+      alert(`✅ Booking Confirmed!\nHostel: ${hostelName}\nPrice: ${price}\nThank you, ${document.getElementById("userName").value}!`);
+      closeBooking();
+    };
+  }
+
+  function closeBooking() {
+    document.getElementById("bookingModal").classList.add("hidden");
   }
 </script>
 
@@ -161,6 +194,7 @@
 
 </body>
 </html>
+
 
 
 
