--- a/index.html
+++ b/index.html
@@ -46,14 +46,14 @@
     </div>
   </section>
 
-<!-- FEATURED AREAS SECTION -->
+<!-- FEATURED AREAS SECTION (uses local images in images/...) -->
 <section class="py-16 px-6 bg-gray-100 text-center">
   <h2 class="text-3xl md:text-4xl font-bold text-gray-800 mb-10">Featured Areas</h2>
 
   <div class="grid md:grid-cols-2 lg:grid-cols-4 gap-8 max-w-7xl mx-auto">
     <!-- SCHOOL GATE -->
     <div class="bg-white rounded-2xl shadow-lg hover:shadow-2xl transition overflow-hidden">
-      <img src="https://images.unsplash.com/photo-1598706349416-3c4b0cbf4e3b?auto=format&fit=crop&w=800&q=80" alt="School Gate" class="w-full h-48 object-cover">
+      <img src="images/schoolgate.jpg" alt="School Gate" class="w-full h-48 object-cover" onerror="this.onerror=null;this.src='https://placehold.co/800x480/cccccc/444444?text=School+Gate'">
       <div class="p-5">
         <h3 class="text-2xl font-semibold text-gray-800">School Gate</h3>
         <p class="text-gray-600 mt-2">Hostels close to the main campus gate with easy transport access.</p>
@@ -63,17 +63,17 @@
 
     <!-- SATELLITE GATE -->
     <div class="bg-white rounded-2xl shadow-lg hover:shadow-2xl transition overflow-hidden">
-      <img src="https://images.unsplash.com/photo-1605276374104-dee2a0ed3f87?auto=format&fit=crop&w=800&q=80" alt="Satellite Gate" class="w-full h-48 object-cover">
+      <img src="images/satellite.jpg" alt="Satellite Gate" class="w-full h-48 object-cover" onerror="this.onerror=null;this.src='https://placehold.co/800x480/cccccc/444444?text=Satellite+Gate'">
       <div class="p-5">
         <h3 class="text-2xl font-semibold text-gray-800">Satellite Gate</h3>
-        <p class="text-gray-600 mt-2">Modern student lodges with reliable light and water supply.</p>
+        <p class="text-gray-600 mt-2">Modern lodges with reliable light and water supply.</p>
         <button onclick="openHostel('satelliteGate')" class="inline-block bg-blue-600 hover:bg-blue-700 text-white px-5 py-2 mt-4 rounded-full font-medium">View Hostels</button>
       </div>
     </div>
 
     <!-- IWOROKO -->
     <div class="bg-white rounded-2xl shadow-lg hover:shadow-2xl transition overflow-hidden">
-      <img src="https://images.unsplash.com/photo-1600585154154-8f8bdee6e4b1?auto=format&fit=crop&w=800&q=80" alt="Iworoko" class="w-full h-48 object-cover">
+      <img src="images/iworoko.jpg" alt="Iworoko" class="w-full h-48 object-cover" onerror="this.onerror=null;this.src='https://placehold.co/800x480/cccccc/444444?text=Iworoko'">
       <div class="p-5">
         <h3 class="text-2xl font-semibold text-gray-800">Iworoko</h3>
         <p class="text-gray-600 mt-2">Affordable hostels close to local shops and transport links.</p>
@@ -83,7 +83,7 @@
 
     <!-- PHASE TWO -->
     <div class="bg-white rounded-2xl shadow-lg hover:shadow-2xl transition overflow-hidden">
-      <img src="https://images.unsplash.com/photo-1600585154302-98d08ab4e310?auto=format&fit=crop&w=800&q=80" alt="Phase Two" class="w-full h-48 object-cover">
+      <img src="images/phasetwo.jpg" alt="Phase Two" class="w-full h-48 object-cover" onerror="this.onerror=null;this.src='https://placehold.co/800x480/cccccc/444444?text=Phase+Two'">
       <div class="p-5">
         <h3 class="text-2xl font-semibold text-gray-800">Phase Two</h3>
         <p class="text-gray-600 mt-2">Peaceful area with clean, secure shared apartments.</p>
@@ -93,97 +93,137 @@
   </div>
 </section>
 
-<!-- HOSTEL POPUP MODAL -->
-<div id="hostelModal" class="fixed inset-0 bg-black bg-opacity-70 hidden justify-center items-center z-50">
-  <div class="bg-white rounded-2xl w-11/12 md:w-2/3 lg:w-1/2 p-6 relative shadow-2xl">
-    <button onclick="closeHostel()" class="absolute top-3 right-4 text-gray-500 hover:text-red-500 text-2xl">&times;</button>
-    <h3 id="modalTitle" class="text-2xl font-bold mb-6 text-center text-gray-800"></h3>
-    <div id="hostelList" class="grid md:grid-cols-2 gap-6"></div>
+<!-- HOSTEL POPUP MODAL (centered) -->
+<div id="hostelModal" class="fixed inset-0 hidden z-50">
+  <!-- backdrop + center container -->
+  <div class="absolute inset-0 bg-black bg-opacity-70"></div>
+  <div class="relative z-10 flex items-center justify-center min-h-screen p-4">
+    <div id="hostelModalInner" class="bg-white rounded-2xl w-full max-w-3xl p-6 shadow-2xl transform transition-all scale-100">
+      <button onclick="closeHostel()" class="absolute top-4 right-5 text-gray-500 hover:text-red-500 text-2xl">&times;</button>
+      <h3 id="modalTitle" class="text-2xl font-bold mb-4 text-center text-gray-800"></h3>
+      <div id="hostelList" class="grid md:grid-cols-2 gap-6"></div>
+    </div>
   </div>
 </div>
 
-<!-- BOOKING MODAL -->
-<div id="bookingModal" class="fixed inset-0 bg-black bg-opacity-70 hidden justify-center items-center z-50">
-  <div class="bg-white rounded-2xl w-11/12 md:w-1/2 lg:w-1/3 p-6 relative shadow-2xl">
-    <button onclick="closeBooking()" class="absolute top-3 right-4 text-gray-500 hover:text-red-500 text-2xl">&times;</button>
-    <h3 class="text-2xl font-bold mb-6 text-center text-gray-800">Book Your Hostel</h3>
+<!-- BOOKING MODAL (centered) -->
+<div id="bookingModal" class="fixed inset-0 hidden z-50">
+  <div class="absolute inset-0 bg-black bg-opacity-70"></div>
+  <div class="relative z-10 flex items-center justify-center min-h-screen p-4">
+    <div id="bookingModalInner" class="bg-white rounded-2xl w-full max-w-lg p-6 shadow-2xl">
+      <button onclick="closeBooking()" class="absolute top-4 right-5 text-gray-500 hover:text-red-500 text-2xl">&times;</button>
+      <h3 id="bookingTitle" class="text-2xl font-bold mb-4 text-center text-gray-800"></h3>
 
-    <form id="bookingForm" class="space-y-4">
-      <input type="text" id="userName" placeholder="Full Name" required class="w-full border rounded-lg p-3 focus:outline-none focus:ring-2 focus:ring-blue-500">
-      <input type="tel" id="userPhone" placeholder="Phone Number" required class="w-full border rounded-lg p-3 focus:outline-none focus:ring-2 focus:ring-blue-500">
-      <select id="bookingDuration" required class="w-full border rounded-lg p-3 focus:outline-none focus:ring-2 focus:ring-blue-500">
-        <option value="">Select Duration</option>
-        <option value="1 Semester">1 Semester</option>
-        <option value="1 Year">1 Year</option>
-      </select>
-      <button type="submit" class="w-full bg-blue-600 hover:bg-blue-700 text-white py-3 rounded-full font-medium">Proceed to Payment</button>
-    </form>
+      <form id="bookingForm" class="space-y-4">
+        <input type="text" id="userName" placeholder="Full Name" required class="w-full border rounded-lg p-3 focus:outline-none focus:ring-2 focus:ring-blue-500">
+        <input type="tel" id="userPhone" placeholder="Phone Number" required class="w-full border rounded-lg p-3 focus:outline-none focus:ring-2 focus:ring-blue-500">
+        <select id="bookingDuration" required class="w-full border rounded-lg p-3 focus:outline-none focus:ring-2 focus:ring-blue-500">
+          <option value="">Select Duration</option>
+          <option value="1 Semester">1 Semester</option>
+          <option value="1 Year">1 Year</option>
+        </select>
+        <div class="flex gap-3">
+          <button type="submit" class="flex-1 bg-blue-600 hover:bg-blue-700 text-white py-3 rounded-full font-medium">Proceed to Payment</button>
+          <button type="button" onclick="closeBooking()" class="flex-1 bg-gray-200 hover:bg-gray-300 text-gray-800 py-3 rounded-full font-medium">Cancel</button>
+        </div>
+      </form>
+    </div>
   </div>
 </div>
 
-<!-- SCRIPT FOR MODALS -->
+<!-- SCRIPT: modal + local images fallback + booking -->
 <script>
+  // Hostels data: images point to local images/hostelX.jpg (you must upload them)
   const hostelData = {
     schoolGate: [
-      { name: "Grace Villa", price: "₦180,000 / year", image: "https://images.unsplash.com/photo-1598706349416-3c4b0cbf4e3b?auto=format&fit=crop&w=800&q=80" },
-      { name: "Peace Lodge", price: "₦200,000 / year", image: "https://images.unsplash.com/photo-1605276374104-dee2a0ed3f87?auto=format&fit=crop&w=800&q=80" }
+      { name: "Grace Villa", price: "₦180,000 / year", image: "images/hostel1.jpg" },
+      { name: "Peace Lodge", price: "₦200,000 / year", image: "images/hostel2.jpg" }
     ],
     satelliteGate: [
-      { name: "Royal Suites", price: "₦250,000 / year", image: "https://images.unsplash.com/photo-1600585154302-98d08ab4e310?auto=format&fit=crop&w=800&q=80" },
-      { name: "Comfort Villa", price: "₦230,000 / year", image: "https://images.unsplash.com/photo-1600585154154-8f8bdee6e4b1?auto=format&fit=crop&w=800&q=80" }
+      { name: "Royal Suites", price: "₦250,000 / year", image: "images/hostel3.jpg" },
+      { name: "Comfort Villa", price: "₦230,000 / year", image: "images/hostel4.jpg" }
     ],
     iworoko: [
-      { name: "Victory Lodge", price: "₦150,000 / year", image: "https://images.unsplash.com/photo-1598706349416-3c4b0cbf4e3b?auto=format&fit=crop&w=800&q=80" },
-      { name: "Divine Hostel", price: "₦170,000 / year", image: "https://images.unsplash.com/photo-1605276374104-dee2a0ed3f87?auto=format&fit=crop&w=800&q=80" }
+      { name: "Victory Lodge", price: "₦150,000 / year", image: "images/hostel1.jpg" },
+      { name: "Divine Hostel", price: "₦170,000 / year", image: "images/hostel2.jpg" }
     ],
     phaseTwo: [
-      { name: "Harmony Place", price: "₦220,000 / year", image: "https://images.unsplash.com/photo-1600585154302-98d08ab4e310?auto=format&fit=crop&w=800&q=80" },
-      { name: "Golden Homes", price: "₦240,000 / year", image: "https://images.unsplash.com/photo-1600585154154-8f8bdee6e4b1?auto=format&fit=crop&w=800&q=80" }
+      { name: "Harmony Place", price: "₦220,000 / year", image: "images/hostel3.jpg" },
+      { name: "Golden Homes", price: "₦240,000 / year", image: "images/hostel4.jpg" }
     ]
   };
 
+  // helper: safely open modal (centered)
   function openHostel(area) {
     const modal = document.getElementById("hostelModal");
     const title = document.getElementById("modalTitle");
     const list = document.getElementById("hostelList");
 
-    title.innerText = area.replace(/([A-Z])/g, ' $1').trim() + " Hostels";
-    list.innerHTML = hostelData[area].map(
-      (hostel) => `
-        <div class="border rounded-xl overflow-hidden shadow-md hover:shadow-lg transition">
-          <img src="${hostel.image}" class="w-full h-40 object-cover">
-          <div class="p-4">
-            <h4 class="font-semibold text-lg">${hostel.name}</h4>
-            <p class="text-gray-600">${hostel.price}</p>
-            <button onclick="openBooking('${hostel.name}', '${hostel.price}')" class="mt-3 w-full bg-blue-600 hover:bg-blue-700 text-white py-2 rounded-full">Book Now</button>
-          </div>
-        </div>
-      `
-    ).join("");
+    // guard: if area not found, do nothing
+    if (!hostelData[area]) {
+      alert("No hostels found for this area.");
+      return;
+    }
 
+    title.innerText = area.replace(/([A-Z])/g, ' $1').trim() + " Hostels";
+    list.innerHTML = hostelData[area].map(hostel => `
+      <div class="border rounded-xl overflow-hidden shadow-md hover:shadow-lg transition">
+        <img src="${hostel.image}" class="w-full h-40 object-cover" onerror="this.onerror=null;this.src='https://placehold.co/600x400/cccccc/444444?text=Hostel'">
+        <div class="p-4">
+          <h4 class="font-semibold text-lg">${hostel.name}</h4>
+          <p class="text-gray-600">${hostel.price}</p>
+          <button onclick="openBooking('${escapeHtml(hostel.name)}','${escapeHtml(hostel.price)}')" class="mt-3 w-full bg-blue-600 hover:bg-blue-700 text-white py-2 rounded-full">Book Now</button>
+        </div>
+      </div>
+    `).join("");
+
+    // show modal and lock body scroll
     modal.classList.remove("hidden");
-    modal.classList.add("flex");
+    document.body.style.overflow = "hidden";
   }
 
   function closeHostel() {
-    document.getElementById("hostelModal").classList.add("hidden");
+    const modal = document.getElementById("hostelModal");
+    modal.classList.add("hidden");
+    document.body.style.overflow = "";
   }
 
+  // Booking modal
   function openBooking(hostelName, price) {
     closeHostel();
     const bookingModal = document.getElementById("bookingModal");
+    document.getElementById("bookingTitle").innerText = `Booking — ${hostelName}`;
     bookingModal.classList.remove("hidden");
-    bookingModal.classList.add("flex");
+    document.body.style.overflow = "hidden";
 
-    document.getElementById("bookingForm").onsubmit = (e) => {
+    // handle submit
+    const form = document.getElementById("bookingForm");
+    form.onsubmit = function(e) {
       e.preventDefault();
-      alert(`✅ Booking Confirmed!\nHostel: ${hostelName}\nPrice: ${price}\nThank you, ${document.getElementById("userName").value}!`);
+      const userName = document.getElementById("userName").value.trim();
+      const userPhone = document.getElementById("userPhone").value.trim();
+      const duration = document.getElementById("bookingDuration").value;
+      if (!userName || !userPhone || !duration) {
+        alert("Please fill all fields.");
+        return;
+      }
+
+      // simulate payment / success
+      alert(`✅ Booking submitted!\nHostel: ${hostelName}\nPrice: ${price}\nName: ${userName}\nPhone: ${userPhone}\nDuration: ${duration}`);
       closeBooking();
     };
   }
 
   function closeBooking() {
     document.getElementById("bookingModal").classList.add("hidden");
+    document.body.style.overflow = "";
+    // reset form
+    document.getElementById("bookingForm").reset();
+  }
+
+  // small utility to escape quotes passed into onClick strings
+  function escapeHtml(str) {
+    return String(str).replace(/'/g, "\\'").replace(/"/g, '\\"');
   }
 </script>
 
@@ -194,6 +234,7 @@
 
 </body>
 </html>
+
 
 
 
