--- a/index.html
+++ b/index.html
@@ -280,6 +280,41 @@
   });
 </script>
 
+  <!-- TESTIMONIALS SECTION -->
+<section class="py-20 bg-gray-50 text-center">
+  <div class="max-w-6xl mx-auto px-6">
+    <h2 class="text-3xl md:text-4xl font-bold text-gray-800 mb-10" data-aos="fade-up">
+      What Students Say
+    </h2>
+    <p class="text-gray-600 mb-12 max-w-2xl mx-auto" data-aos="fade-up" data-aos-delay="100">
+      Hear from students who’ve already found their perfect accommodation with SecureHome.
+    </p>
+
+    <div class="grid md:grid-cols-3 gap-8">
+      <!-- Card 1 -->
+      <div class="bg-white p-8 rounded-2xl shadow-md hover:shadow-xl transition" data-aos="fade-up">
+        <img src="https://i.pravatar.cc/100?img=1" alt="student1" class="w-20 h-20 rounded-full mx-auto mb-4">
+        <p class="text-gray-600 mb-3 italic">"I found a secure and affordable hostel near my faculty within minutes. SecureHome made it so easy!"</p>
+        <h3 class="font-semibold text-gray-800">Aisha – EKSU Student</h3>
+      </div>
+
+      <!-- Card 2 -->
+      <div class="bg-white p-8 rounded-2xl shadow-md hover:shadow-xl transition" data-aos="fade-up" data-aos-delay="100">
+        <img src="https://i.pravatar.cc/100?img=2" alt="student2" class="w-20 h-20 rounded-full mx-auto mb-4">
+        <p class="text-gray-600 mb-3 italic">"The listings are real and verified. I feel safe knowing my hostel was properly checked."</p>
+        <h3 class="font-semibold text-gray-800">David – EKSU Student</h3>
+      </div>
+
+      <!-- Card 3 -->
+      <div class="bg-white p-8 rounded-2xl shadow-md hover:shadow-xl transition" data-aos="fade-up" data-aos-delay="200">
+        <img src="https://i.pravatar.cc/100?img=3" alt="student3" class="w-20 h-20 rounded-full mx-auto mb-4">
+        <p class="text-gray-600 mb-3 italic">"I love how simple the website is! I’ll recommend SecureHome to all my friends."</p>
+        <h3 class="font-semibold text-gray-800">Grace – EKSU Student</h3>
+      </div>
+    </div>
+  </div>
+</section>
+
   <!-- Footer -->
   <footer class="bg-white py-6 text-center text-gray-600 border-t mt-10">
     <p>&copy; 2025 Secure Home. All rights reserved.</p>
@@ -287,6 +322,7 @@
 
 </body>
 </html>
+
 
 
 
