--- a/index.html
+++ b/index.html
@@ -315,6 +315,21 @@
   </div>
 </section>
 
+  <!-- CALL TO ACTION SECTION -->
+<section class="bg-blue-600 text-white py-20 text-center">
+  <div class="max-w-3xl mx-auto px-6">
+    <h2 class="text-3xl md:text-4xl font-bold mb-6" data-aos="zoom-in">
+      Ready to Find Your Dream Hostel?
+    </h2>
+    <p class="text-blue-100 mb-8" data-aos="zoom-in" data-aos-delay="100">
+      Join thousands of students who trust SecureHome to connect them with safe, verified, and affordable hostels near campus.
+    </p>
+    <a href="#" class="bg-white text-blue-600 font-semibold px-8 py-3 rounded-full hover:bg-blue-50 transition" data-aos="zoom-in" data-aos-delay="200">
+      Get Started
+    </a>
+  </div>
+</section>
+
   <!-- Footer -->
   <footer class="bg-white py-6 text-center text-gray-600 border-t mt-10">
     <p>&copy; 2025 Secure Home. All rights reserved.</p>
@@ -322,6 +337,7 @@
 
 </body>
 </html>
+
 
 
 
