Update fmt.Println message from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -330,6 +330,44 @@
   </div>
 </section>
 
+  <!-- FOOTER SECTION -->
+<footer class="bg-gray-900 text-gray-300 py-12">
+  <div class="max-w-6xl mx-auto px-6 grid md:grid-cols-3 gap-10">
+    <!-- Logo & About -->
+    <div>
+      <h3 class="text-2xl font-bold text-white mb-4">SecureHome</h3>
+      <p class="text-gray-400">Your trusted platform for finding safe and affordable student hostels around campus.</p>
+    </div>
+
+    <!-- Quick Links -->
+    <div>
+      <h4 class="text-xl font-semibold text-white mb-4">Quick Links</h4>
+      <ul class="space-y-2">
+        <li><a href="#" class="hover:text-blue-400">Home</a></li>
+        <li><a href="#" class="hover:text-blue-400">About</a></li>
+        <li><a href="#" class="hover:text-blue-400">Find Hostels</a></li>
+        <li><a href="#" class="hover:text-blue-400">Contact</a></li>
+      </ul>
+    </div>
+
+    <!-- Contact Info -->
+    <div>
+      <h4 class="text-xl font-semibold text-white mb-4">Contact</h4>
+      <p>Email: support@securehome.com</p>
+      <p>Phone: +234 812 345 6789</p>
+      <div class="flex space-x-4 mt-4">
+        <a href="#" class="hover:text-blue-400">🌐</a>
+        <a href="#" class="hover:text-blue-400">📘</a>
+        <a href="#" class="hover:text-blue-400">📸</a>
+      </div>
+    </div>
+  </div>
+
+  <div class="text-center text-gray-500 mt-12 border-t border-gray-700 pt-6">
+    &copy; 2025 SecureHome. All rights reserved.
+  </div>
+</footer>
+
   <!-- Footer -->
   <footer class="bg-white py-6 text-center text-gray-600 border-t mt-10">
     <p>&copy; 2025 Secure Home. All rights reserved.</p>
@@ -337,6 +375,7 @@
 
 </body>
 </html>
+
 
 
 
