--- a/index.html
+++ b/index.html
@@ -228,6 +228,60 @@
   }
 </script>
 
+  <!-- School Gate Card -->
+<div class="bg-white rounded-xl shadow-lg overflow-hidden" data-aos="fade-up">
+  <img src="images/schoolgate.jpg" alt="School Gate Area" class="w-full h-48 object-cover">
+  <div class="p-6">
+    <h3 class="text-xl font-bold text-gray-800 mb-2">School Gate</h3>
+    <p class="text-gray-600 mb-4">Hostels close to university entrance for quick access to campus.</p>
+    <button onclick="openModal('schoolgate')" class="bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700">View Hostels</button>
+  </div>
+</div>
+
+<!-- Modal for School Gate -->
+<div id="modal-schoolgate" class="fixed inset-0 bg-black bg-opacity-50 hidden justify-center items-center z-50">
+  <div class="bg-white rounded-lg shadow-lg w-11/12 md:w-2/3 p-6">
+    <h2 class="text-2xl font-semibold mb-4 text-blue-600">Hostels around School Gate</h2>
+    <div class="grid md:grid-cols-3 gap-4">
+      <div class="border rounded-lg overflow-hidden shadow">
+        <img src="images/hostel1.jpg" class="w-full h-40 object-cover" alt="">
+        <div class="p-3">
+          <h4 class="font-bold text-gray-800">Elite Hostel</h4>
+          <p class="text-gray-600 text-sm">₦250,000/year — 5 min walk to campus</p>
+        </div>
+      </div>
+      <div class="border rounded-lg overflow-hidden shadow">
+        <img src="images/hostel2.jpg" class="w-full h-40 object-cover" alt="">
+        <div class="p-3">
+          <h4 class="font-bold text-gray-800">Comfort Villa</h4>
+          <p class="text-gray-600 text-sm">₦200,000/year — Free Wi-Fi and water</p>
+        </div>
+      </div>
+      <div class="border rounded-lg overflow-hidden shadow">
+        <img src="images/hostel3.jpg" class="w-full h-40 object-cover" alt="">
+        <div class="p-3">
+          <h4 class="font-bold text-gray-800">Prime Lodge</h4>
+          <p class="text-gray-600 text-sm">₦300,000/year — Close to mini mart</p>
+        </div>
+      </div>
+    </div>
+    <div class="mt-6 flex justify-end">
+      <button onclick="closeModal('schoolgate')" class="bg-red-500 text-white px-4 py-2 rounded hover:bg-red-600">Close</button>
+    </div>
+  </div>
+</div>
+
+<script>
+function openModal(area) {
+  document.getElementById(`modal-${area}`).classList.remove('hidden');
+  document.getElementById(`modal-${area}`).classList.add('flex');
+}
+function closeModal(area) {
+  document.getElementById(`modal-${area}`).classList.add('hidden');
+  document.getElementById(`modal-${area}`).classList.remove('flex');
+}
+</script>
+
   <!-- WHY CHOOSE US SECTION -->
 <section class="py-20 bg-white text-center">
   <div class="max-w-6xl mx-auto px-6">
@@ -375,6 +429,7 @@
 
 </body>
 </html>
+
 
 
 
